--- a/install
+++ b/install
@@ -1,7 +1,6 @@
 #!/bin/sh
 
 # shellcheck disable=SC3043
-export RCRC="${PWD}/rcrc" && rcup -f
 
 fancy_echo() {
   local fmt="$1"; shift
@@ -101,4 +100,10 @@ fancy_echo "Configuring asdf version manager ..."
 if [ ! -d "$HOME/.asdf" ]; then
   brew install asdf
   append_to_zshrc "source $(brew --prefix asdf)/libexec/asdf.sh" 1
+fi
+
+fancy_echo "Installing vim-plug ..."
+if [ ! -e "$HOME"/.vim/autoload/plug.vim ]; then
+  curl -fLo "$HOME"/.vim/autoload/plug.vim --create-dirs \
+      https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 fi
